# FDeploy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithm/: CMakeLists.txt
algorithm/classify/: CMakeLists.txt
algorithm/classify/include/: hogSvm.h  resnet.h  resnet.hpp
algorithm/classify/src/: resnet.cu
algorithm/common/: CMakeLists.txt  common.hpp
algorithm/common/include/: check.hpp  cuda_tools.hpp  infer.hpp
algorithm/common/src/: check.cpp  cuda_tools.cu  infer.cu
algorithm/detect/: CMakeLists.txt
algorithm/detect/src/: yolo.cu
algorithm/enhance/: CMakeLists.txt  README.md
algorithm/enhance/include/: enhancement.h
algorithm/enhance/src/: color_extraction.cpp  enhancement.cu
algorithm/segment/: CMakeLists.txt
algorithm/segment/include/: unet.hpp
algorithm/segment/src/: unet.cu
classification_algorithm/: CMakeLists.txt
classification_algorithm/include/: hogSvm.h  resnet.h
classification_algorithm/src/: hogSvm.cpp  resnet.cpp
detect_algorithm/: CMakeLists.txt  README.md
detect_algorithm/include/: cpm.hpp  infer.hpp  yolo.hpp  yolov5.h
detect_algorithm/src/: infer.cu  yolo.cu  yolov5.cpp
doc/tex/: doc.tex
sample/: CMakeLists.txt  Retinex_sample.cpp  hogSvm_sample.cpp  resnet_sample.cpp  unet_sample.cpp  yolo_sample.cpp  yolov5_sample.cpp
train/hogSvm/: hogParm.yaml  train.py
train/resnet/: config.yaml  dataload.py  metric.py  model.py  to_onnx.py  train.py  view_onnx.py
utils_algorithm/: CMakeLists.txt
utils_algorithm/include/: color_extraction.h  enhancement.h  match_rectification.h
utils_algorithm/src/: enhancement.cpp  match_rectification.cpp
